force-app/main/default/objects/Service__c/fields/IsDiscountable__c.field-meta.xml
<CustomField>
    <fullName>IsDiscountable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDiscountable</label>
    <type>Checkbox</type>
</CustomField>