force-app/main/default/objects/Service__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <label>Service Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>