force-app/main/default/objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsDiscountable__c</columns>
    <columns>Price__c</columns>
    <columns>Service_Code__c</columns>
    <columns>Service_Description__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>